Korrektur von Sitaya fuer den Text REST Architektur, monolithe Architektur und Einordnung wurde eingefuegt

--- a/references.bib
+++ b/references.bib
@@ -728,3 +728,13 @@ Die Softwareverteilung ist ein kritischer Prozess, da mit ihr auch Betriebssyste
 	note = {Library Catalog: de.reactjs.org},
 	file = {Snapshot:/Users/eddie/Zotero/storage/WEY84F9I/create-a-new-react-app.html:text/html}
 }
+
+@online{duden_mapping,
+	title = {Duden {\textbar} Mapping},
+	url = {https://www.duden.de/rechtschreibung/Mapping},
+	abstract = {Definition, Rechtschreibung, Synonyme und Grammatik von 'Mapping' auf Duden online nachschlagen. Wörterbuch der deutschen Sprache.},
+	urldate = {2020-07-07},
+	langid = {german},
+	note = {Library Catalog: www.duden.de},
+	file = {Snapshot:/Users/eddie/Zotero/storage/DY7UTSUN/Mapping.html:text/html}
+}
