--- a/sections/Anhang/rahles.tex
+++ b/sections/Anhang/rahles.tex
@@ -35,7 +35,7 @@ R: Deswegen würde ich im Moment Nein sagen. Denn gerade im Fall eines jungen Un
 \label{appendix:r-5}
 R: Was jedoch nicht heißt, dass man die Qualität des Codes an sich vernachlässigen sollte.
 
-E: Okay es wurde viel vorgegriffen. Was völlig okay ist. Vielleicht springen wir einmal zur Frage vier, da vieles was du bereits gesagt hast, darauf angespielt.
+E: Okay es wurde viel vorgegriffen. Was völlig okay ist. Vielleicht springen wir einmal zur Frage 4, da vieles was du bereits gesagt hast, darauf angespielt.
 
 E: Ein Startup zeichnet sich dadurch aus, dass es insbesondere in der Anfangsphase zu vielen Veränderungen der ursprünglichen Geschäftsidee kommt. Microservices auf der anderen Seite zeichnen sich dadurch aus, dass sie feste Schnittstellen und Kontextgrenzen besitzen. Meinst du, dass trotzdem Microservices in einem dynamischen Umfeld eingesetzt werden sollten?
 
@@ -76,7 +76,7 @@ R: So macht es keinen Sinn, wenn ich jetzt sage, ich fange an, irgendwelche Komp
 
 R: So beispielsweise wenn ich jetzt eine Komponente der Anwendung auf Konsumenten auslege, und es absehbar ist, dass ab nächstem Jahr sich hauptsächlich auf Unternehmenskunden konzentriert wird. Dann würde ich nicht sagen, dass das eine sinnvolle Entscheidung ist. Auch wenn es aus dem rein architektonischen Ansatz Sinn ergibt.
 
-E: Ja, da gehe ich absolut mit. Weil du einmal die Unabhängigkeit von Teams angesprochen hast würde ich gerne auf Frage zwei eingehen.
+E: Ja, da gehe ich absolut mit. Weil du einmal die Unabhängigkeit von Teams angesprochen hast würde ich gerne auf Frage 2 eingehen.
 
 E: Microservices ermöglichen es Teams, unabhängig voneinander an unterschiedlichen Services zu arbeiten. Welche Rahmenbedingungen sehen Sie als notwendig, dass Teams separat voneinander arbeiten kann?
 
@@ -121,7 +121,7 @@ R: Ob das aber das Team aus Softwareentwicklern selbst ist, oder ob es ein  Prod
 \label{appendix:r-25}
 R: Also man kann das genauso gut in den Sand setzen, wenn ein Team mit einem Monolithen  fremdbestimmt durch andere Business Owner arbeit. Das kann bei einem Monolithen genauso schief gehen wie bei Microservices.
 
-E: Du hattest einmal eine technische Anforderung mit angerissen. Da würde ich jetzt in Frage Drei gerne detaillierter eingehen wollen. 
+E: Du hattest einmal eine technische Anforderung mit angerissen. Da würde ich jetzt in Frage 3 gerne detaillierter eingehen wollen. 
 
 E: Gibt es in deinen Augen irgendwelche technischen Anforderungen, die PluraPolit erfüllen sollte, bevor es die Softwarearchitektur von einer monolithischen Architektur zu einer Microservice-Architektur umstellt? 
 
