--- a/sections/Anhang/schlaak.tex
+++ b/sections/Anhang/schlaak.tex
@@ -65,7 +65,7 @@ S: Dies ist grade bei externen Teams besonders wichtig, da sie natürlich davon 
 
 S: Das heißt die Beschreibung der Schnittstellen müssen sauber sein, sie müssen gut konzipiert sein, sie müssen sinnvolle Fehlercodes zurückgehen und sie müssen idealerweise auch dokumentiert sein.
 
-E: Dann würde ich zur Frage Drei übergeben. 
+E: Dann würde ich zur Frage 3 übergeben. 
 
 E: Gibt es in Ihren Augen irgendwelche technischen Anforderungen, die PluraPolit erfüllen sollte? 
 
@@ -80,7 +80,7 @@ S: Ja, es sind unterschiedliche Risiken. Beim Monolithen hast du den Nachteil, d
  \label{appendix:s-18}
 S: Bei einer Microservice-Architektur bzw. bei unabhängig Services ist das Risiko geringer. Die Services müssen nur Robust implementiert sein und ggf. vernünftige Fehlermeldung zurück geben und idealerweise auf gecachte Inhalte zurückgreift. Also die Services müssen weitestgehend autark sind.
 
-E: Dann gehen wir zur Frage vier.
+E: Dann gehen wir zur Frage 4.
 
 E: Ein Startup zeichnet sich dadurch aus, dass es insbesondere in der Anfangsphase zu vielen Veränderungen in der ursprünglichen Geschäftsidee gekommen. Microservices auf der anderen Seite zeichnen sich dadurch aus, dass sie feste Schnittstellen und Kontextgrenzen besitzen. Meinen Sie das trotzdem Microservices in einem dynamischen Umfeld eingesetzt werden sollten?
 
