--- a/sections/Anhang/troppmann.tex
+++ b/sections/Anhang/troppmann.tex
@@ -23,7 +23,7 @@ T: Technische Voraussetzungen, die vorhanden sein müssen, sind: Der Monolith mu
 \label{appendix:t-1} \label{appendix:t-2}
 T: Also wie gesagt ich brauche eine technische Trennung, die schon vorhanden sein muss und ich muss einen Business Case haben das sich das auch lohnt.
 
-E: Ok bei der technischen Trennung bzw. bei der Trennung allgemein, ist ja nicht immer der fall gegeben, dass schon Trennung vorliegt, sondern dass man sich bewusst dafür entscheidet. Um dies näher zu besprechen würde ich Frage vier vorgreifen.
+E: Ok bei der technischen Trennung bzw. bei der Trennung allgemein, ist ja nicht immer der fall gegeben, dass schon Trennung vorliegt, sondern dass man sich bewusst dafür entscheidet. Um dies näher zu besprechen würde ich Frage 4 vorgreifen.
 
 E: Ein Start-up zeichnet sich dadurch aus, dass es insbesondere in der Anfangsphase zu vielen Veränderungen in der ursprünglichen Geschäftsidee kommen. Microservices auf der anderen Seite zeichnen dadurch aus, dass sie feste Schnittstellen und Kontextgrenzen besitzen. Meine Sie das trotzdem Microservices in einem dynamischen Umfeld eingesetzt werden sollten?
 
@@ -64,7 +64,7 @@ T: Gleichzeitig entsteht dadurch ein Problem. Man holt sich dadurch ein extremen
 T: In der Praxis sieht es so aus, dass ein gut Teil der Zeit dafür verwendet wird, dass die Teams sich untereinander abstimmen müssen. Das heißt sie müssen sich absprechen, da sie gemeinsam an einem Feature arbeiten. Projektmanagementmethodiken, wie Scrum und oder andere agile Vorgehensweise supporten solche Vorgehensweisen eigentlich.
 
 \label{appendix:t-11} \label{appendix:t-12}
-T: Jetzt ist hier die Frage: Kann man Microservices in einem dynamischen Umfeld einsetzen?  Ja. Man erreicht eine höhere Flexibilität, was die technische Seite der Entwicklung angeht, aber man hat im auch ein höheren Managementfaktor. Das darf man nicht außer acht lassen.
+T: Jetzt ist hier die Frage: Kann man Microservices in einem dynamischen Umfeld einsetzen?  Ja. Man erreicht eine höhere Flexibilität, was die technische Seite der Entwicklung angeht, aber man hat im auch ein höheren Managementfaktor. Das darf man nicht außer Acht lassen.
 
 T: Es ist auch nicht so, dass man durch Microservices schneller implementiert. Die meisten Architekturen die auf Microservices bestehen, sind langsam in der implementierung, da sie eine höhere Komplexität besitzen, die man nicht auf den ersten Blick sieht.
 
@@ -92,7 +92,7 @@ T: Ich glaube es gibt nicht viele Dinge wo man heutzutage sagt: “Ich brauche M
 \label{appendix:t-18}
 T: Es ist hat die Frage in welcher Komplexität und Ausbaustufe.
 
-E: Okay, weil Sie es grade angebracht haben, dass Teams separat auch in unterschiedlichen Programmiersprachen arbeiten, würde ich gerne zu Frage zwei übergehen.
+E: Okay, weil Sie es grade angebracht haben, dass Teams separat auch in unterschiedlichen Programmiersprachen arbeiten, würde ich gerne zu Frage 2 übergehen.
 
 E: Microservices ermöglichen es Teams unabhängig voneinander an unterschiedlichen Service zu arbeiten. Welche Rahmenbedingungen sehen Sie als notwendig, dass Teams separat voneinander arbeiten können?
 
