--- a/sections/Auswertung.tex
+++ b/sections/Auswertung.tex
@@ -33,7 +33,7 @@ Die Interviewergebnisse widerlegen die ursprüngliche Auffassung, dass ein Produ
 
 Wie die Interviewergebnisse zeigen, ist die Komplexität eines Systems die größte Motivation Microservices einzuführen. Gleichzeitig bedarf die Umstellung zu Microservices Kenntnisse über den Aufbau und Verwaltung der Infrastruktur. Dadurch können Kosten für das Unternehmen entstehen. Auf der anderen Seite verspricht sich das Unternehmen durch die Umstellung eine Verbesserung der aktuellen Situation. Übertrifft der prognostizierte Mehrwert die Kosten der Umstellung, ist die Umstellung wirtschaftlich.
 
-Aus den Antworten zur Frage Fünf geht hervor, dass alle drei Experten in erster Line einen Monolithen empfehlen. Dies lässt sich darauf zurückführen, dass die Experten, aufgrund der geringen Komplexität von PluraPolit, keine Notwendigkeit sehen, Microservices umzusetzen und sie bei der geringen Anzahl an Entwickler eine verantwortungsvolle Verwaltung der Infrastruktur anzweifeln. Folglich bewerten sie die Umstellung für PluraPolit als nicht lukrativ.
+Aus den Antworten zur Frage 5 geht hervor, dass alle drei Experten in erster Line einen Monolithen empfehlen. Dies lässt sich darauf zurückführen, dass die Experten, aufgrund der geringen Komplexität von PluraPolit, keine Notwendigkeit sehen, Microservices umzusetzen und sie bei der geringen Anzahl an Entwickler eine verantwortungsvolle Verwaltung der Infrastruktur anzweifeln. Folglich bewerten sie die Umstellung für PluraPolit als nicht lukrativ.
 
 Bei der Auswertung der Ergebnisse muss berücksichtigt werden, dass sich diese ausschließlich auf Start-ups und PluraPolit beziehen. Würden etablierte Firmen oder Vereine beleuchtet, wären die Bedingungen möglicherweise anders. Aus diesem Grund kann keine generelle Aussage getroffen werden.
 
