--- a/sections/Einleitung.tex
+++ b/sections/Einleitung.tex
@@ -1,3 +1,5 @@
+%Todo Zeitformen noch einmal überprüfen
+
 \section{Einleitung}
 
 Für ein junges Unternehmen im Bereich der digitalen Produktentwicklung ist es wichtig, Ideen schnell umzusetzen und ein erstes Feedback zu erhalten. Dies hilft bei der Bestätigung von Annahmen und bei der Gewinnung von Investoren.
