--- a/sections/Methodik/durchfuehrung.tex
+++ b/sections/Methodik/durchfuehrung.tex
@@ -16,7 +16,7 @@ Mit dieser Frage sollte die Annahme beantwortet werden, dass es überhaupt Bedin
 
 In zwei der drei Interviews (Christoph Rahles und Alexander Troppmann) wurden nach der ersten Frage die vierte Frage eingeschoben. Dies bot sich an, da beide Experten sich thematisch der besagten Fragestellung annäherten.
 
-Es folgte Frage zwei:
+Es folgte Frage 2:
 
 \textit{Welche Rahmenbedingungen sehen Sie als notwendig, dass Teams separat voneinander arbeiten können?}
 
@@ -31,11 +31,11 @@ Die Frage zielte darauf ab, die Auffassung zu valideren, dass:
 \end{enumerate}
 Es wurde sich für eine möglichst offene Frage entschieden, um den Experten die Möglichkeit zugeben, uneingeschränkt zu antworten.
 
-Anschließend wurde Frage drei gestellt:
+Anschließend wurde Frage 3 gestellt:
 
 \textit{Gibt es in Ihren Augen irgendwelche technischen Anforderungen, die PluraPolit erfüllen sollte? }
 
-Frage drei zielte darauf ab, Bedingung fünf, sechs und sieben zu überprüfen (siehe \cref{sec:bedingungen}). Demnach wurde erwartet, dass ein Netzwerk: 
+Frage 3 zielte darauf ab, Bedingung 5, 6 und 7 zu überprüfen (siehe \cref{sec:bedingungen}). Demnach wurde erwartet, dass ein Netzwerk: 
 
 \begin{enumerate}
 	\item die Kommunikation zwischen den Services ermöglicht,
@@ -45,7 +45,7 @@ Frage drei zielte darauf ab, Bedingung fünf, sechs und sieben zu überprüfen (
 
 Auch hier wählte man bewusst eine offene Fragestellung.
 
-Frage vier ging der Fragestellung nach, ob Microservices in einem dynamischen Umfeld eingesetzt werden sollten. Hierfür wurde vorab eine Zusammenfassung aus der Literaturrecherche eingeschoben:
+Frage 4 ging der Fragestellung nach, ob Microservices in einem dynamischen Umfeld eingesetzt werden sollten. Hierfür wurde vorab eine Zusammenfassung aus der Literaturrecherche eingeschoben:
 
 \textit{Ein Start-up zeichnet sich dadurch aus, dass es insbesondere in der Anfangsphase zu vielen Veränderungen in der ursprünglichen Geschäftsidee kommt. Microservices auf der anderen Seite zeichnen sich dadurch aus, dass sie feste Schnittstellen und Kontextgrenzen besitzen.}
 
