--- a/sections/Methodik/ergebnisse/frage1.tex
+++ b/sections/Methodik/ergebnisse/frage1.tex
@@ -3,7 +3,7 @@
 
 \textit{Haben Sie das Gefühl, dass es Bedingungen gibt, die PluraPolit erfüllen sollte, bevor es ihre Softwarearchitektur zu einer Microservice-Architektur umstellt und wenn ja, welche Bedingungen empfinden Sie als wichtig?}
 
-Alle drei Experten beantworteten diese Frage mit Ja und nannten weitere Bedingungen (siehe \combref{appendix:r-1}, \combref{appendix:Troppmann} und \combref{appendix:schlaak}).
+Alle drei Experten beantworteten diese Frage mit Ja und nannten weitere Bedingungen (siehe \combref{appendix:r-1}, \combref{appendix:t-1} und \combref{appendix:s-1}).
 
 Sowohl Sebastian Schlaak, als auch Alexander Troppmann gaben als Antwort an, dass sie erst Microservices in betracht ziehen, wenn inhaltlich unterschiedliche Anwendungen vorliegen. Herr Schlaak beschrieb in seinem Interview: \textit{\enquote{ich glaube, das wäre eine Bedingung, wenn man sagt: […] ich habe etwas [eine neue Funktion], was […] einen ganz anderen Zweck erfüllt […].}} (siehe \combref{appendix:s-5}). Herr Troppmann fasste es in seinem Interview wie folgt zusammen:  \textit{\enquote{Also wie gesagt, ich brauche eine technische Trennung […]}} und verwies auf die Trennung zwischen unterschiedlichen logischen Abläufen (siehe \combref{appendix:t-1}).
 
