--- a/sections/Methodik/ergebnisse/frage4.tex
+++ b/sections/Methodik/ergebnisse/frage4.tex
@@ -3,7 +3,7 @@
 
 \textit{Ein Start-up zeichnet sich dadurch aus, dass es insbesondere in der Anfangsphase zu vielen Veränderungen in der ursprünglichen Geschäftsidee kommt. Microservices auf der anderen Seite zeichnen sich dadurch aus, dass sie feste Schnittstellen und Kontextgrenzen besitzen. Meinen Sie, dass trotzdem Microservices in einem dynamischen Umfeld eingesetzt werden sollten?}
 
-Christoph Rahles antwortete auf diese Frage: \textit{\enquote{Da gibt es glaube ich kein Richtig oder Falsch.}} und verdeutlichte, dass die Frage immer im Kontext der wirtschaftlichen und technologischen Situation des Start-up beantwortet werden muss (siehe \combref{appendix:r-6}).
+Christoph Rahles antwortete auf diese Frage: \textit{\enquote{Da gibt es, glaube ich kein Richtig oder Falsch.}} und verdeutlichte, dass die Frage immer im Kontext der wirtschaftlichen und technologischen Situation des Start-up beantwortet werden muss (siehe \combref{appendix:r-6}).
 
 Alexander Troppmann vertrat die Meinung, dass Microservices grade im dynamischen Umfeld eingesetzt werden sollten. Seine Meinung begründete er damit, dass Microservices aufgrund des einfachen Austausches von Services im dynamischen Umfeld Sinn ergeben.\footnote{
 \textit{\enquote{Ich kenne viele Start-ups, die von Anfang an Microservices eingesetzt haben, weil gerade Microservices so sind, dass man verschiedene Services austauschen kann. Also gerade im dynamischen Umfeld machen Microservices Sinn.}} (siehe \combref{appendix:t-5})
