--- a/sections/Theory/software-architektur.tex
+++ b/sections/Theory/software-architektur.tex
@@ -56,14 +56,13 @@ Der Austausch von Informationen und das Aufrufen von externer Funktionalität ko
 Interaktionsorientierte Systeme zeichnen sich dadurch aus, dass sie den Fokus auf die Interaktion zwischen Mensch und Maschine legen \parencite[vgl.][S. 124]{starke_effektive_2015}.
 Ein viel verwendeter Vertreter hiervon ist der Model-View-Controller-Ansatz (MVC-Ansatz). Hierbei werden die einzelnen Komponenten in drei unterschiedliche Kategorien eingeteilt, von dem jeweils ein Repräsentant vorhanden sein muss. Eingeteilt wird in die drei Kategorien: Model, View und Controller, wobei jede Gattung eine eigene Funktionalität besitzt.
 
-So kümmert sich das Model um die Datenspeicherung, den Datenabruf und die Verarbeitung von Informationen und ist eine Verbindung zwischen dem Speichermedium und der Anwendung (siehe \cref{fig:mvc-cm-kommunikation} und \cref{fig:mvc-vm-kommunikation} Punkt 4 und 5 bzw. Punkt 5 und 6). Da jegliche Speicherung ausschließlich über das Model abläuft, wird das Speichern und das Abrufen einheitlich geregelt.
+Das Model kümmert sich um die Datenspeicherung, den Datenabruf und die Verarbeitung von Informationen. Es ist eine Verbindung zwischen dem Speichermedium und der Anwendung (siehe \cref{fig:mvc-cm-kommunikation} und \cref{fig:mvc-vm-kommunikation} Punkt 4 und 5 bzw. Punkt 5 und 6). Da jegliche Speicherung ausschließlich über das Model abläuft, ist das Speichern und das Abrufen einheitlich geregelt.
 
 Davon getrennt sind die graphischen Darstellungen, welche durch Views definiert werden. Sie erhalten die Informationen vom Model. Dabei können die Daten entweder direkt von der View angefordert (siehe \cref{fig:mvc-vm-kommunikation} Punkt 4) oder indirekt vom Controller übergeben werden (siehe \cref{fig:mvc-cm-kommunikation} Punkt 3 und 7). Unabhängig vom Informationsfluss hilft es die Darstellung von der restlichen Logik zu trennen, um eine einheitliche Verantwortung zu wahren. Dies ist besonderes empfehlenswert, da Dateien zum beschreiben von Views, schnell unübersichtlich werden.
 
-Der Controller hingegen kümmert sich um die Verwaltung der Benutzereingabe und um das Aufrufen der Views (siehe \cref{fig:mvc-cm-kommunikation}, \cref{fig:mvc-vm-kommunikation} Punkt 2 und 7 bzw. Punkt 2 und 3). Er sorgt dafür, dass die Events und Aktionen verarbeitet werden und führt entsprechende Datenverarbeitungen im Model aus. Falls notwendig, lädt er auch Informationen aus der Datenbank und übergibt sie der entsprechenden View, welche er abschließend rendert.
+Der Controller kümmert sich um die Verwaltung der Benutzereingabe und um das Aufrufen der Views (siehe \cref{fig:mvc-cm-kommunikation}, \cref{fig:mvc-vm-kommunikation} Punkt 2 und 7 bzw. Punkt 2 und 3). Er sorgt dafür, dass Events und Aktionen verarbeitet werden und führt entsprechende Datenverarbeitungen im Model aus. Falls notwendig, lädt er Informationen aus der Datenbank und übergibt sie der entsprechenden View, welche er abschließend rendert.
 
-Bei dem MVC-Ansatz handelt es sich um ein Muster, welches oft in der Softwarearchitektur verwendet wird, da es die Verantwortlichkeiten trennt und das System verständlicher wird.
-Im Unterschied zu verteilten Systemen stellt das Muster keine Anforderungen an die Hardware. Viel mehr beschreibt es eine Möglichkeit, den Quellcode hinsichtlich seiner Funktionalität zu teilen, weswegen dieser Stil auch innerhalb einer Komponente eingesetzt werden kann.
+Da der MVC-Ansatz eine einheitliche Struktur etabliert und dadurch das System verständlicher wird, ist es ein Architekturstil, welcher oft in der Softwarearchitektur verwendet wird. Im Unterschied zu verteilten Systemen stellt dieser Stil keine Anforderungen an die Hardware, sondern beschreibt eine Möglichkeit, den Quellcode hinsichtlich seiner Funktionalität zu teilen. Dadurch kann der MVC-Ansatz auch innerhalb einer Komponente eingesetzt werden.
 
 \begin{figure}
 	\centering
@@ -82,25 +81,30 @@ Im Unterschied zu verteilten Systemen stellt das Muster keine Anforderungen an d
 \subsubsection{REST-Architektur}
 \label{sec:rest}
 
-Neben den bislang genannten Architekturstilen, gibt es eine Vielzahl von weiteren Strukturierungen, die sich erst in den letzten 20 Jahre entwickelt haben. Einer dieser Architekturstile ist die REST-Architektur, welche vom Miterfinder des HTTP-Standards, Roy Fielding, definiert wurde \parencite[][S. 128]{starke_effektive_2015}. Er beschrieb diesen Stil in seiner Dissertation an der Universität von Kalifornien im Jahr 2000 und charakterisiert ihn als Architekturstil für das Web.
+Neben den genannten Architekturstilen, gibt es eine Vielzahl von weiteren Strukturierungen, die sich erst in den letzten 20 Jahre entwickelt haben. Einer dieser Architekturstile ist die REST-Architektur, welche vom Miterfinder des HTTP-Standards, Roy Fielding, definiert wird \parencite[][S. 128]{starke_effektive_2015}. Er beschrieb diesen Stil in seiner Dissertation an der Universität von Kalifornien im Jahr 2000 und charakterisierte ihn als Architekturstil des Web.
 
-Dabei steht REST für \textit{Representational State Transfer}, welches einen Architekturstil für verteilte Systeme beschreibt und auf der Client-Server-Architektur aufbaut \parencite[][S. 76]{fielding_architectural_2000}. Client-Server-Architektur beschreibt eine Ausprägung eines verteilten Systems, bei dem die Anwendung in Server und Clients geteilt werden \parencite[][S. 117]{starke_effektive_2015}.\footnote{Dabei beziehen sich die Begriffe \textit{\enquote{Server}} und \textit{\enquote{Client}} auf Software Komponenten und auf den physischen Server und das Endgerät des Nutzers (Client). Des Weiteren grenzt sich der Architekturstil von der Mainframe Architektur ab, bei der über Terminals Anweisungen an einen Großrechner gestellt werden.}
+%Todo noch einmal überarbeiten. Es sieht mir nicht richtig aus. Besonders der Abschnitt, dass Rest ein verteilte Architektur ist.
+REST steht für \textit{Representational State Transfer}, welches einen Architekturstil beschreibt und der auf der Client-Server-Architektur aufbaut \parencite[][S. 76]{fielding_architectural_2000}.
+Die Client-Server-Architektur beschreibt eine Konzept um Aufgaben innerhalb eines Netzwerkes zu verteilen. Die Aufgaben werden von Programmen erledigt, die in Server und Clients unterteilt werden \parencite[][S. 117]{starke_effektive_2015}.\footnote{Dabei beziehen sich die Begriffe \textit{\enquote{Server}} und \textit{\enquote{Client}} auf Softwarekomponenten und auf den physischen Server und auf das Endgerät des Nutzers (Client). Des Weiteren grenzt sich der Architekturstil von der Mainframe Architektur ab, bei der über Terminals Anweisungen an einen Großrechner gestellt werden.}
 
-Ein Server ist dabei eine Software Komponente im Netzwerk, welche Services anbietet. Ein Service könnte beispielsweise zuständig sein, alle Informationen der hinterlegten Kunden auszugeben. Der Client hingegen konsumiert lediglich diese Informationen und dient dem Benutzer als Bedienungsoberfläche. Dies bedeutet, dass der Server nur passiv auf Anfragen vom Client wartet, während der Client selbst keine Informationen verarbeitet, sondern ausschließlich anzeigt. Gleichwohl handelt es sich um ein Programm, welches auf dem Endgerät des Benutzers (Computer, Mobiltelefon) ausgeführt wird.
+Ein Server ist eine Softwarekomponente im Netzwerk, welche Dienste anbietet. Ein Dienst könnte es beispielsweise sein, alle Informationen der hinterlegten Kunden auszugeben.
 
-Die REST-Architektur verwendet diese Aufteilung, um eine feste Trennung der Zuständigkeit zu integrieren \parencite[vgl.][S. 78]{fielding_architectural_2000}.
+Der Client konsumiert die Informationen des Servers und dient dem Benutzer als Benutzeroberfläche. Dies bedeutet, dass der Server passiv auf Anfragen vom Client wartet, während der Client ausschließlich die Informationen des Servers anzeigt. 
 
-Die zweite Bedingung, die Fielding an den Architekturstil stellt, ist dass die Kommunikation zustandslos, zu Englisch \textit{stateless}, abläuft \parencite[][S. 78]{fielding_architectural_2000}. Dies bedeutet, dass die Nachrichten, die zwischen Server und Client ausgetauscht werden, alle nötigen Informationen beinhalten \parencite[][S. 128]{starke_effektive_2015}. Somit gibt der Server auf Anfrage des Clients stets die gleiche Antwort zurück, egal ob dieser zum Ersten, oder zum wiederholten Mal angefragt wurde. Des Weiteren hängt die Antwort nicht vom Client ab.
-Diese Entkopplung zwischen den Komponenten ermöglicht, dass die Aufgabe des Servers, sowie des Clients durch mehrere Computer verrichtet werden kann und  das System skalierbar ist \parencite[][S. 79]{fielding_architectural_2000}.
+Die REST-Architektur verwendet diese Aufteilung, um eine feste Trennung der Zuständigkeiten zu integrieren \parencite[vgl.][S. 78]{fielding_architectural_2000}.
 
-Der Hauptunterschied zwischen der REST-Architektur und anderen Stilen, liegt in der genauen Bestimmung der zu verwendenden Kommunikationsschnittstellen. So bestimmt die REST-Architektur sehr explizit, welche Form zur Kommunikation verwendet werden darf. So werden Methoden vom Server über HTTP-Standards aufgerufen. Konkret bedeutet dies, dass die einzelnen Dienste des Servers sich nach den HTTP-Methoden (GET, PUT, POST und DELETE) richten und es ein klares Mapping zwischen ihnen gibt. \parencite[vgl.][S. 128]{starke_effektive_2015}. Somit baut die REST-Architektur auf einem Kommunikationsstandard auf, der sich im Internet etabliert hat.
+Des Weiteren stellt Herr Fielding die Bedingung auf, dass die Kommunikation zwischen Server und Client zustandslos, zu Englisch \textit{stateless}, abläuft \parencite[][S. 78]{fielding_architectural_2000}. Dies bedeutet, dass die Nachrichten, die zwischen Server und Client ausgetauscht werden, alle nötigen Informationen beinhalten \parencite[][S. 128]{starke_effektive_2015}. Der Server gibt auf Anfrage stets die gleiche Antwort zurück, egal ob dieser zum Ersten, oder zum wiederholten Mal angefragt wurde. Diese Entkopplung zwischen den Komponenten ermöglicht, dass die Aufgaben des Servers, sowie des Clients durch mehrere Computer verrichtet werden können und das System skalierbar ist \parencite[][S. 79]{fielding_architectural_2000}.
+
+Der Hauptunterschied zwischen der REST-Architektur und anderen Stilen, liegt in der genauen Bestimmung der zu verwendenden Kommunikationsschnittstellen. Die REST-Architektur bestimmt sehr explizit, welche Form der Kommunikation verwendet werden darf. So werden Methoden vom Server über HTTP-Standards aufgerufen. Konkret bedeutet dies, dass die einzelnen Dienste des Servers sich nach den HTTP-Methoden (GET, PUT, POST und DELETE) richten und es ein klares Mapping\footnotemark zwischen ihnen gibt. \parencite[vgl.][S. 128]{starke_effektive_2015}. Die REST-Architektur baut somit auf einem Kommunikationsstandard auf, der sich im Internet etabliert hat.
+
+\footnotetext{Mapping bezeichnet die Handlung zwei verschiedene Datenmodelle aufeinander abzustimmen \parencite{duden_mapping}. In dem angegebenen Fall werden die HTTP-Methoden (GET, PUT, POST, DELETE) mit der Methoden des Servers (SHOW, UPDATE, CREATE, DELETE) abgestimmt.}
 
 Auf Grundlage der standardisierten Kommunikation können zwischen Server und Client intelligente Zwischenstationen geschaltet werden, die dafür zuständig sind, häufig vorkommende Anfragen abzuspeichern \parencites[vgl.][S. 79 f.]{fielding_architectural_2000}[][S. 128]{starke_effektive_2015}.
 
 Die Antwort des Servers erfolgt durch Repräsentationen der Daten, wovon es für jede Ressource\footnotemark mehrere Formate gibt. So kann eine Schnittstelle abhängig vom Aufruf sowohl JSON, als auch XML oder HTML zurückgeben \parencite[vgl.][S. 128]{starke_effektive_2015}.
 \footnotetext{Als Ressource werden die Informationen bezeichnet, die durch den Aufruf einer URL zurück gegeben werden. Ein Beispiel wäre der HTTP-Aufruf \textit{GET: https://api.plurapolit.de/api/users}, der alle Informationen der User zurück gibt.}
 
-Verwendet wird die REST-Architektur ausschließlich für Anwendungen im Internet, da es auf die Anwendung des Hypertext Transfer Protokoll\footnote{Weitere Informationen zum Hypertext Transfer Protokoll kann unter folgender Literatur gefunden werden \parencite{leach_hypertext_2020}.} (HTTP) angewiesen ist. Dabei findet der Architekturstil sowohl Anwendung für ganze Systeme, als auch für komplexe Anwendungen mit einer Vielzahl einzelner Services.
+Verwendet wird die REST-Architektur ausschließlich für Anwendungen im Internet, da diese auf das Hypertext Transfer Protokoll\footnote{Weitere Informationen zum Hypertext Transfer Protokoll kann unter folgender Literatur gefunden werden \parencite{leach_hypertext_2020}.} (HTTP) angewiesen ist. Der Architekturstil wird dabei zur Strukturierung sowohl eines ganzen Software-Systems, als auch einzelner Services verwendet.
 
 \subsubsection{Monolithische Architektur}
 \label{sec:monolith}
@@ -109,33 +113,40 @@ Der Begriff \textit{\enquote{Monolith}} leitet sich vom altgriechischen \textit{
 
 Nach Rod Stephens liegt eine monolithische Softwarearchitektur vor, wenn jegliche Funktionalität des Systems miteinander verbunden ist. Dabei spricht er über die Verbindung von Dateneingabe, Datenausgabe, Datenverarbeitung, sowie Fehlerhandhabung und Benutzeroberflächen \parencite[vgl.][S. 94]{stephens_beginning_2015}.
 
-Anders sieht es Sam Newman. Nach ihm liegt ein monolithisches System schon dann vor, wenn die gesamte Funktionalität eines Systems gemeinsam über einen Deployment-Prozess\footnotemark bereitgestellt wird \parencite[vgl.][Kap. 2.2]{newman_monolith_2019}. Folglich muss nicht zwingend jegliche Logik miteinander verbunden sein. Er unterteilt monolithische Systeme in drei Kategorien: Einzelprozess-Monolithe, modulare Monolithe und verteilte Monolithe \parencite[vgl.][Kap. 2.2]{newman_monolith_2019}.
-\footnotetext{Deployment-Prozess, oder auch Bereitstellungsprozess, bezeichnet den Prozess ein Software-System Benutzern zur Verfügung zustellen \parencite[vgl.][]{softwareverteilung_2020}.}
+Anders sieht es Sam Newman. Nach ihm liegt ein monolithisches System schon dann vor, wenn die gesamte Funktionalität eines Systems gemeinsam über einen Deployment-Prozess\footnotemark bereitgestellt wird \parencite[vgl.][Kap. 2.2]{newman_monolith_2019}. Demnach muss nicht zwingend jegliche Logik miteinander verbunden sein.
 
-Der Einzelprozess-Monolith ist die gängigste Form und deckt sich mit der Definition von Rod Stephens. Es handelt sich dabei, um ein System bei dem das gesamte System einen Prozess abbildet. Dies bedeutet, dass jegliche Funktionalität aufeinander aufbauend ist und nur eine Datenspeicherung für die gesamte Anwendung verwendet wird \parencite[vgl.][Kap. 2.2.1]{newman_monolith_2019}.
+\footnotetext{Der Deployment-Prozess, oder auch der Bereitstellungsprozess, bezeichnet den Prozess ein Software-System Benutzern zur Verfügung zu stellen \parencite[vgl.][]{softwareverteilung_2020}.}
 
-Anders ist dies bei dem modularen Monolithen. Er zeichnet sich darin aus, dass die Funktionalität in einzelne Module geteilt wird, die eine separate Datenspeicherung besitzen können \parencite[vgl.][Kap. 2.2.2]{newman_monolith_2019}. Im Gegensatz zu verteilten Systemen sind die einzelnen Module jedoch nicht auf separaten Computern verteilt, sondern über einen Rechner online gestellt. Des Weiteren sind die einzelnen Module nur leicht entkoppelt, sodass es zwischen ihnen Abhängigkeiten geben kann.
+Sam Newman unterteilt monolithische Systeme in drei Kategorien: Einzelprozess-Monolithe, modulare Monolithe und verteilte Monolithe \parencite[vgl.][Kap. 2.2]{newman_monolith_2019}.
 
-Dies ist bei verteilten Monolith anders, da die einzelnen Module komplett entkoppelt sind und Nachrichten ausschließlich über definierte Schnittstellen ausgetauscht werden \parencite[vgl.][S. 116]{starke_effektive_2015}. Ein verteilter Monolith erfüllt somit jegliche Anforderungen an ein verteiltes System mit der Ausnahme, dass alle Komponenten durch nur einen Prozess online gestellt werden.
+Der Einzelprozess-Monolith ist die gängigste Form und deckt sich mit der Definition von Rod Stephens. Es handelt sich um ein System, welches genau einen Prozess abbildet. Dies bedeutet, dass jegliche Funktionalität aufeinander aufbauend ist und dass nur eine Datenspeicherung für die gesamte Anwendung verwendet wird \parencite[vgl.][Kap. 2.2.1]{newman_monolith_2019}.
+
+Anders ist dies bei dem modularen Monolithen. Er zeichnet sich darin aus, dass die Funktionalität in einzelne Module geteilt wird, die eine separate Datenspeicherung besitzen können \parencite[vgl.][Kap. 2.2.2]{newman_monolith_2019}. Im Gegensatz zu verteilten Systemen, sind die einzelnen Module nicht auf separaten Computern verteilt, sondern werden durch einen einzelnen Rechner online gestellt, wodurch Abhängigkeiten zwischen den Modulen bestehen bleiben können.
+
+Dies ist bei verteilten Monolithen anders, da die einzelnen Module komplett entkoppelt sind und Nachrichten ausschließlich über definierte Schnittstellen ausgetauscht werden \parencite[vgl.][S. 116]{starke_effektive_2015}. Ein verteilter Monolith erfüllt somit jegliche Anforderungen an ein verteiltes System mit der Ausnahme, dass alle Komponenten durch nur einen Prozess online gestellt werden.
 
 Weder Stephens noch Newman geben Vorgaben hinsichtlich der Gliederung innerhalb eines monolithischen Systems. Demnach kann ein MVC-Ansatz als monolithisches System gelten, solange es einheitlich bereitgestellt wird.
 
 Im Rahmen dieser Arbeit wird beim Begriff Monolith stets von einem Einzelprozess-Monolithen ausgegangen, außer es wird explizit von einem modularen, oder verteilten Monolithen geschrieben.
 
-Vergleicht man das monolithische System mit einem verteilten System, gibt es Vor- und Nachteile \parencite[vgl.][Kap. 2.2.4 und Kap. 2.2.5]{newman_monolith_2019}. So ist das Bereitstellen eines Monoliths einfacher, da es einen Bereitstellungsprozess für die gesamte Anwendung gibt. Wiederum führt dies dazu, dass der Prozess deutlich länger dauert. Diese Tatsache ist besonders dann gravierend, wenn vermehrt kleine Änderungen vorgenommen werden. Andererseits vereinfacht eine Anwendung, die als ein Prozess zu sehen ist, die Fehlersuche und ermöglicht es Funktionen mehrfach zu verwenden. Das verursacht jedoch, dass schnell Abhängigkeiten entstehen können und Änderungen ungewollte Fehler verursachen. Dadurch wird die Umsetzung von neuen Funktionen mit wachsender Codebase verlangsamt und der Einstieg von neuen Teammitgliedern erschwert.
+Vergleicht man das monolithische System mit einem verteilten System, gibt es Vor- und Nachteile \parencite[vgl.][Kap. 2.2.4 und Kap. 2.2.5]{newman_monolith_2019}. So ist das Bereitstellen eines Monoliths einfacher, da es nur einen Bereitstellungsprozess für die gesamte Anwendung gibt. Dies führt jedoch dazu, dass der Prozess deutlich länger dauert, welches besonders dann gravierend ist, wenn vermehrt kleine Änderungen vorgenommen werden und die langen Deployment-Prozesse die Softwareentwicklung hemmen. 
 
-Da alle Entwickler eines Unternehmens auf einer Codebase arbeiten, kommt es schnell zu Unterschieden im Programmcode. So führt ein Monolith dazu, dass bei einer großen Anzahl von Entwicklern viele Absprachen notwendig sind \parencite[vgl.][Kap. 2.2.4]{newman_monolith_2019}.
+Andererseits vereinfacht nur eine Anwendung die Fehlersuche und ermöglicht es Funktionen mehrfach zu verwenden. Das verursacht jedoch, dass schnell Abhängigkeiten entstehen können und Änderungen zu Fehlern führen. Dadurch wird die Umsetzung von neuen Funktionen mit wachsender Codebase verlangsamt und der Einstieg von neuen Teammitgliedern erschwert.
 
-Anders ist es bei systemübergreifenden Tests: Diese werden durch ein monolithisches System begünstigt und können im Vergleich zu einem verteilten System einfacher umgesetzt werden  \parencite[vgl.][Kap. 2.2.5]{newman_monolith_2019}.
+Da alle Entwickler eines Unternehmens auf eine Codebase zugreifen und über z.~B. Github asynchrone arbeiten, kommt es schnell zu Unterschieden im Programmcode. So führt ein Monolith dazu, dass bei einer großen Anzahl von Entwicklern viele Absprachen notwendig sind \parencite[vgl.][Kap. 2.2.4]{newman_monolith_2019}.
+
+Anders ist es bei systemübergreifenden Tests, diese werden durch ein monolithisches System begünstigt und können im Vergleich zu einem verteilten System einfacher umgesetzt werden  \parencite[vgl.][Kap. 2.2.5]{newman_monolith_2019}.
 
 \subsubsection{Einordnung des aktuellen Systems von PluraPolit}
 \label{sec:einordnung}
 
 Wie bereits in der Einleitung beschrieben, bietet PluraPolit eine Plattform an, die Jung- und Erstwähler bei der politischen Bildung unterstützt.
 
-Es wurde ein Software-System entwickelt, welches auf der einen Seite PluraPolit die Möglichkeit gibt Content zu verwalten und auf der anderen Seite dem Endkunden die Inhalte graphisch aufbereitet. Hierfür wurde, neben der Plattform für die Nutzer, ein Content Management System (CMS) umgesetzt. Programmiert wurde dieses im  Webframework Ruby on Rails.\footnote{
-Ruby on Rails, kurz auch als Rails bezeichnet, ist ein quellenoffenes Webframework, welches für die Programmiersprache Ruby entwickelt wurde \parencites[vgl.][S.4]{hartl_ruby_2016}{ruby_org}[vgl.][S. 24]{sieben_wochen}. Es ist komplett Open Source und wird von einer aktiven Community entwickelt. Es gibt eine Vielzahl von kostenfreien Paketen, sogenannte Gems, die nach Belieben zu einem Projekt hinzugefügt werden können. Im Vergleich zu anderen Frameworks zeichnet sich Rails besonders durch seine Implementierung der REST-Architektur aus \parencite[vgl.][S. 5]{hartl_ruby_2016}. Diese Implementierung führt jedoch dazu, dass eine Vielzahl von Bedingungen an die Entwicklung und Implementierung von Rails-Anwendungen gestellt werden. Getreu dem Motto \textit{\enquote{Konvention vor Konfiguration}} nutzt Rails die Bestimmungen als Vorteil und integriert ein System, in das externe Pakete ohne Konfigurationsaufwand hinzugefügt werden können \parencite{ruby_doctrine}.
-} Strukturiert werden Rails-Anwendungen nach dem MVC-Ansatz \parencites[vgl.][S. 66 ff.]{hartl_ruby_2016}.
+Es wurde ein Software-System entwickelt, welches auf der einen Seite PluraPolit die Möglichkeit gibt Content zu verwalten und auf der anderen Seite die Inhalte dem Endkunden graphisch aufbereitet. Dies wurde umgesetzt, indem die Anwendung neben der Plattform für die Nutzer auch ein Content-Management-System (CMS) für PluraPolit besitzt. Die Anwendung wurde in Ruby on Rails\footnotemark programmiert und ist nach dem MVC-Ansatz strukturiert \parencites[vgl.][S. 66 ff.]{hartl_ruby_2016}.
+
+\footnotetext{
+Das Ruby on Rails, kurz auch als Rails bezeichnet, ist ein quellenoffenes Webframework, welches für die Programmiersprache Ruby entwickelt wurde \parencites[vgl.][S.4]{hartl_ruby_2016}{ruby_org}[vgl.][S. 24]{sieben_wochen}. Rails ist Open Source und wird von einer aktiven Community entwickelt. Es gibt eine Vielzahl von kostenfreien Paketen, sogenannte Gems, die nach belieben zu einem Projekt hinzugefügt werden können. Im Vergleich zu anderen Frameworks zeichnet sich Rails besonders durch seine Implementierung der REST-Architektur aus \parencite[vgl.][S. 5]{hartl_ruby_2016}. Diese Implementierung führt jedoch dazu, dass eine Vielzahl von Bedingungen an die Entwicklung und Erstellung von Rails-Anwendungen gestellt werden. Getreu dem Motto \textit{\enquote{Konvention vor Konfiguration}} nutzt Rails die Bestimmungen als Vorteil und integriert ein System, in das externe Pakete ohne Konfigurationsaufwand hinzugefügt werden können \parencite{ruby_doctrine}.
+}
 
 \begin{figure}
 	\centering
@@ -158,13 +169,13 @@ Ruby on Rails, kurz auch als Rails bezeichnet, ist ein quellenoffenes Webframewo
 	\label{fig:coffee}
 \end{figure}
 
-Um eine neue Tonaufnahme einzupflegen, wird die entsprechende Webseite im Browser aufgerufen. Dabei sendet der Browser über die URL eine Anfrage an den Server, der anhand eines Verzeichnises den verantwortlichen Controller bestimmt und die Anfrage an diesen weiterleitet.  Der Controller verarbeitet die Anfrage und schickt eine HTML-Seite zurück (siehe \cref{fig:plurapolit-call-webpage}).
+Um eine neue Tonaufnahme einzupflegen, wird die entsprechende Webseite im Browser aufgerufen. Der Browser sendet über die URL eine Anfrage an den Server, der anhand eines Verzeichnisses den verantwortlichen Controller bestimmt und die Anfrage an diesen weiterleitet.  Der Controller verarbeitet die Anfrage und schickt eine HTML-Seite zurück (siehe \cref{fig:plurapolit-call-webpage}).
 
 Über diese Webseite kann die Aufnahme hochgeladen und abgespeichert werden. 
 Dies geschieht, indem per Klick im CMS eine HTTP-Anfrage an den Controller geschickt wird. Der Controller speichert den Eintrag und bestätigt das erfolgreiche Abspeichern im View. Das Speichern geschieht dabei über das Model (siehe \cref{fig:plurapolit-save-sounddatei}).
 
-Dabei wird die Tondatei selbst nicht in der Datenbank gespeichert, sondern lediglich ein Verweis darauf. 
-Die Datei wird vorher zum Speicherservice von Amazon Web Services (S3) geschickt, welcher die Tonaufnahme über eine URL zur Verfügung stellt. Nur die URL wird in die Datenbank hinterlegt (siehe \cref{fig:plurapolit-save-to-s3}).
+Die Tondatei selbst wird nicht in der Datenbank gespeichert, sondern lediglich ein Verweis darauf. 
+Die Datei wird vorher auf den Speicherservice von Amazon Web Services (S3) geschickt, welcher die Tonaufnahme über eine URL online zur Verfügung stellt. Nur die URL wird in der Datenbank hinterlegt (siehe \cref{fig:plurapolit-save-to-s3}).
 
 \begin{figure}
 	\centering
@@ -173,8 +184,7 @@ Die Datei wird vorher zum Speicherservice von Amazon Web Services (S3) geschickt
 	\label{fig:plurapolit-edit}
 \end{figure}
 
-Neben dem Abspeichern der Tonaufnahmen kann das CMS auch zum Bearbeiten und Anpassen von bestehenden Datensätzen genutzt werden. Hierfür wird die jeweilige Webseite aufgerufen, welches dazu führt, dass der Controller die angeforderten Daten aus der Datenbank lädt und die entsprechende graphische Darstellung an den Browser zurück gibt. Dabei greift der Controller nicht direkt auf die Datenbank zu, sondern lädt die Inhalte über das Model.
-Auch übergibt der Controller lediglich die geladenen Inhalte an die View, welche  die Daten über Embedded Ruby in das HTML Template integriert und die fertige Webseite zurück gibt (siehe \cref{fig:plurapolit-edit}).
+Neben dem Abspeichern der Tonaufnahmen kann das CMS auch zum Bearbeiten und Anpassen von bestehenden Datensätzen genutzt werden. Die jeweilige Webseite wird hierfür aufgerufen, was dazu führt, dass der Controller die angeforderten Daten aus der Datenbank lädt und die entsprechende graphische Darstellung an den Browser zurück gibt. Der Controller greift dabei nicht direkt auf die Datenbank zu, sondern lädt die Inhalte über das Model. Er übergibt lediglich die geladenen Inhalte an die View, welche die Daten über Embedded Ruby in das HTML Template integriert und die fertige Webseite zurück gibt (siehe \cref{fig:plurapolit-edit}).
 
 \begin{figure}
 	\centering
@@ -197,4 +207,4 @@ Bei der Plattform für die Endkunden handelt es sich, um die selbe Anwendung wie
 
 Diese lädt eigenständig jegliche Informationen über HTTP-Anfragen und kümmert sich um interne Seitenaufrufe. Die Anfragen werden dabei asynchron an die Rails-Anwendung geschickt und vom Controller beantwortet. Über die Kommunikation von Controller und Model erhält die React-Anwendung den Content aus der Datenbank, der vorher eingepflegt wurde (siehe \cref{fig:plurapolit-react-data}).
 
-Es gibt also eine Aufteilung bezüglich der graphischen Darstellung in Content Management System und Plattform. Die Datenspeicherung und Verwaltung sind jedoch gleich. Die gesamte Codebase wird in einem Bereitstellungsprozess dem Hosting Service zur Verfügung gestellt. Damit handelt es sich bei dem System von PluraPolit um ein Monolith, welches teilweise modular ist, die REST-Standards erfüllt und nach dem MVC-Ansatz strukturiert ist. Des Weiteren nutz das System vereinzelt externe Services von AWS, um Tondateien zu speichern.
+Es gibt also eine Aufteilung bezüglich der graphischen Darstellung in Content-Management-System und Plattform. Die Datenspeicherung und Verwaltung sind jedoch gleich. Die gesamte Codebase wird in einem Bereitstellungsprozess dem Hosting Service zur Verfügung gestellt. Damit handelt es sich bei dem System von PluraPolit um einen Monolithen, welches teilweise modular ist, die REST-Standards erfüllt und nach dem MVC-Ansatz strukturiert ist. Des Weiteren nutzt es vereinzelt externe Services von AWS, um Tondateien zu speichern.
